# x-encrypt

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  XEFFormat.md  manifest.json
.github/workflows/: build.yml
1k/: install-pwsh.sh  manifest.ps1
C#/: XFileEncoder.sln
C#/XEncrypt/: XEncrypt.vcxproj  XEncrypt.vcxproj.filters
Document/: XEFFormat.md
XEncrypt/: CMakeLists.txt  CXEncrypt.cpp  CXEncrypt.h
XEncrypt/encrypt/: Decoder.h  Encoder.h  RuntimeApi.cpp  RuntimeApi.h  XContext.cpp  XContext.h  XEFDecoder.cpp  XEFDecoder.h  XEFEncoder.cpp  XEFEncoder.h  XService.cpp  XService.h  api_types.h  config.h  config_api.h  config_api_platforms.h  config_platforms.h
XEncrypt/encrypt/common/: Allocator.cpp  Allocator.h  Common.h  Logging.cpp  Logging.h  XAssert.h  ZipUtils.cpp  ZipUtils.h
XEncrypt/encrypt/plugin/: XEncryptPlugin.h
XEncrypt/encrypt/plugin/xef/: XEFConsts.h  XEFDecoder.cpp  XEFDecoder.h  XEFEncoder.cpp  XEFEncoder.h  XEFEncryptPlugin.cpp  XEFEncryptPlugin.h  XEFHeader.h  XEFPlugin.h  XEFRuntimeApi.cpp  XEFRuntimeApi.h
XEncrypt/encrypt/service/: Common.h  Decoder.h  Encoder.h  XContext.cpp  XContext.h  XResult.h  XService.cpp  XService.h
XEncrypt/test/: CXEncrypt.cpp
scripts/: build_android.sh  build_android_arm64.sh  build_ios.sh  build_linux.sh  build_osx.sh  build_tvos.sh  build_uwp.bat  build_win.bat
